--- a/src/components/DashboardLayout.module.scss
+++ b/src/components/DashboardLayout.module.scss
@@ -19,5 +19,5 @@
 }
 
 .content {
-  @apply flex-1 p-6 max-w-6xl;
+  @apply flex-1 p-6;
 }
